syntax = "proto3";
import "volume_button_behavior.proto";
import "dark_theme_config.proto";

option java_package = "org.a_cyb.sayitalarm";
option java_multiple_files = true;

message UserPreferences {
  int32 time_out = 1;
  int32 snooze_length = 2;
  string defaultAlarmRingtoneUri  = 3;
  int32 ringtone_crescendo_duration = 4;

  VolumeButtonBehaviorProto volume_button_behavior = 5;
  DarkThemeConfigProto dark_theme = 6;
}