syntax = "proto3";

option java_package = "org.a_cyb.sayitalarm";
option java_multiple_files = true;

enum VolumeButtonBehaviorProto {
    NOTHING = 0;
    SNOOZE = 1;
    DISMISS = 2;
}